# pre_commit_python_extra_hooks

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  .prettierignore  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  bugs_report.md  feature.md  mypy.ini  pyproject.toml
docs/: adding-a-check.md  behavioral_contract.md
docs/adr/: 0002-redundant-assignment-scope-tracker-not-unified.md  0003-requires-ast-capability.md  0004-encoding-newline-fidelity.md  0005-cache-key-source-hash-and-config-fingerprint.md  0006-typed-fix-data-per-check.md  0007-redundant-assignment-test-file-heuristic-deliberate.md  0008-ruff-check-cli-parity.md  0009-lint-tests-directory.md  0010-fix-validation-before-write.md  0011-behavioral-contract-audit-fix-engine.md  0012-behavioral-contract-audit-internal-errors-exit-codes.md  0013-behavioral-contract-audit-resource-timeouts-performance.md  0014-behavioral-contract-audit-caching-and-version-invalidation.md  0015-behavioral-contract-audit-file-discovery-path-handling.md  0016-behavioral-contract-audit-process-signals-parallelism.md  0017-behavioral-contract-audit-diagnostics-fix-modes-user-trust.md  0019-behavioral-contract-audit-configuration-and-discovery.md  0020-behavioral-contract-audit-cross-platform-behavior.md  0021-behavioral-contract-audit-rule-isolation-python-compat.md  0022-behavioral-contract-audit-stdio-tty-logging-runtime.md  0023-behavioral-contract-audit-semantic-formatting-preservation.md  0024-behavioral-contract-audit-git-vcs-integration-and-security.md  0025-behavioral-contract-audit-determinism-idempotence.md  0030-file-local-semantic-variable-rename-suggestions.md
docs/audits/: 0001-behavioral-contract-audit-semantic-formatting-preservation.md  0002-behavioral-contract-audit-fix-engine.md  0003-behavioral-contract-audit-internal-errors-exit-codes.md  0004-behavioral-contract-audit-resource-timeouts-performance.md  0005-behavioral-contract-audit-caching-and-version-invalidation.md  0006-behavioral-contract-audit-file-discovery-path-handling.md  0007-behavioral-contract-audit-process-signals-parallelism.md  0008-behavioral-contract-audit-diagnostics-fix-modes-user-trust.md  0009-behavioral-contract-audit-configuration-and-discovery.md  0010-behavioral-contract-audit-cross-platform-behavior.md  0011-behavioral-contract-audit-rule-isolation-python-compat.md  0012-behavioral-contract-audit-stdio-tty-logging-runtime.md  0013-behavioral-contract-audit-git-vcs-integration-and-security.md  0014-behavioral-contract-audit-determinism-idempotence.md
docs/rules/: excessive-blank-lines.md  forbid-vars.md  misplaced-comment.md  redundant-assignment.md  redundant-super-init.md  validate-function-name.md
pre_commit_hooks/: __init__.py  forbid_vars.py
scripts/: benchmark.py
tests/: __init__.py  test_base.py  test_cache.py  test_check_redundant_super_init.py  test_excessive_blank_lines.py  test_fix_excessive_blank_lines.py  test_fix_misplaced_comments.py  test_forbid_vars.py  test_forbid_vars_autofix.py  test_forbid_vars_suggestions.py  test_main.py  test_misplaced_comment.py  test_orchestrator.py  test_prefilter.py  test_redundant_assignment.py  test_redundant_super_init.py  test_scope.py  test_validate_function_name.py  test_validate_function_name_autofix.py  test_validate_function_name_suggestion.py
(+129 files in other folders)
