# Minimal Python project configuration for pre-commit hooks repository

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-extra-hooks"
version = "1.0.0"
description = "Custom pre-commit hooks for code quality enforcement"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Sam", email = "sam@example.com" }]
dependencies = ["toml; python_version < '3.11'"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Entry points define the CLI commands
# These map to the 'entry' field in .pre-commit-hooks.yaml
[project.scripts]
forbid-vars = "pre_commit_hooks.forbid_vars:main"

# Development dependencies
[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "pre-commit>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pre_commit_hooks*"]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 100
target-version = "py38"
exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.14.7"]
