[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-extra-hooks"
version = "1.0.0"
description = "Custom pre-commit hooks for code quality enforcement"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Sam", email = "sam@example.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Entry points define the CLI commands
# These map to the 'entry' field in .pre-commit-hooks.yaml
[project.scripts]
forbid-vars = "pre_commit_hooks.forbid_vars:main"

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.7",
  "pre-commit>=4.5.0",
  "mypy>=1.19.0",
  "types-toml>=0.10.8.20240310",
  "types-requests>=2.32.4.20250913",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pre_commit_hooks*"]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py313"
exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
